# backend/src/main/java/com/sebsach/electronicwebshop/product/ProductResponse.java
@@ -1,0 +1,16 @@
+package com.sebsach.electronicwebshop.product;
+
+import lombok.*;
+
+@Getter
+@Setter
+@AllArgsConstructor
+@NoArgsConstructor
+@Builder
+public class ProductResponse {
+    private String name;
+    private String description;
+    private double price;
+    private int quantity;
+    private String producer;
+}
